Fix blockquote alignment on blog index pages

--- a/_src/sass/base/_figures.scss
+++ b/_src/sass/base/_figures.scss
@@ -65,6 +65,11 @@ figure.quote {
     blockquote {
         margin-top: 0;
         margin-bottom: 0;
+
+        .listing-content & {
+            margin: 0;
+        }
+
     }
 
     /*
